# Kitchenbrawl

./: CMakeLists.txt  README.md  main.cpp
Assets/: character.txt  highscore.cmgt  savefile.cmgt
src/: GameManager.cpp  GameManager.hpp  button.cpp  button.hpp  character.cpp  character.hpp  quitButton.cpp  quitButton.hpp  sceneHandler.cpp  sceneHandler.hpp  spriteObject.cpp  spriteObject.hpp  textObject.cpp
